Adjusted class name for clarity

--- a/Tobey.ChainedEchoes.UltrawideSupport.Unlocker/Tobey.ChainedEchoes.UltrawideSupport.Unlocker.csproj
+++ b/Tobey.ChainedEchoes.UltrawideSupport.Unlocker/Tobey.ChainedEchoes.UltrawideSupport.Unlocker.csproj
@@ -74,7 +74,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="UltrawideSupport.cs" />
+    <Compile Include="UltrawideSupportUnlocker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
